--- a/.github/workflows/scorecard-analysis.yml
+++ b/.github/workflows/scorecard-analysis.yml
@@ -43,6 +43,7 @@ jobs:
           results_file: scorecard-results.sarif
           results_format: sarif
           publish_results: true
+        continue-on-error: true
 
       - name: Analyze each dependency with Scorecard
         run: |
@@ -75,6 +76,7 @@ jobs:
       - name: Upload Scorecard results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
+        continue-on-error: true
         with:
           sarif_file: scorecard-results.sarif
 
