Fix dashboard generation - enable variable expansion in heredoc
- Remove single quotes from heredoc delimiter to allow command substitution
- This fixes the issue where Wed Sep  3 00:30:01 PDT 2025 and other commands weren't being evaluated
- Dashboard will now show actual values instead of literal command strings

--- a/.github/workflows/ai-dependency-analysis.yml
+++ b/.github/workflows/ai-dependency-analysis.yml
@@ -198,7 +198,7 @@ jobs:
 
       - name: Create summary dashboard
         run: |
-          cat > dependency-dashboard.md << 'EOF'
+          cat > dependency-dashboard.md << EOF
           # Dependency Analysis Dashboard
           
           ## Analysis Summary
