--- a/.github/workflows/ai-dependency-analysis.yml
+++ b/.github/workflows/ai-dependency-analysis.yml
@@ -192,12 +192,19 @@ jobs:
 
       - name: Generate detailed reports
         run: |
+          # Check if AI analysis completed successfully
+          if [ ! -f "ai-analysis-result.json" ]; then
+            echo "AI analysis file not found. Creating fallback analysis..."
+            echo "# Analysis Not Available" > ai-analysis-result.json
+            echo "Analysis could not be completed. Please check previous steps." >> ai-analysis-result.json
+          fi
+
           # Create markdown report from AI analysis
           node scripts/format-ai-report.js ai-analysis-result.json analysis-context.json > ai-analysis-report.md
-          
+
           # Generate risk matrix
           node scripts/generate-risk-matrix.js repo-data/ > risk-matrix.json
-          
+
           # Create actionable insights
           node scripts/generate-insights.js ai-analysis-result.json risk-matrix.json > actionable-insights.md
 
