Apply principle of least privilege to workflow permissions
Move write permissions from top-level to job-level scope to follow
security best practices. Set top-level permissions to read-all and
grant specific write permissions only where needed.

Addresses Scorecard Token-Permissions findings.

--- a/.github/workflows/scorecard-analysis.yml
+++ b/.github/workflows/scorecard-analysis.yml
@@ -10,15 +10,16 @@ on:
       - 'package.json'
       - 'package-lock.json'
 
-permissions:
-  contents: read
-  security-events: write
-  actions: read
-  issues: write
+permissions: read-all
 
 jobs:
   analyze-dependencies:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+      issues: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
