Apply least privilege permissions to AI dependency analysis workflow
Set top-level permissions to read-all and move write permissions to
job-level scope for better security. Follows GitHub security best
practices for workflow token permissions.

--- a/.github/workflows/ai-dependency-analysis.yml
+++ b/.github/workflows/ai-dependency-analysis.yml
@@ -22,14 +22,15 @@ on:
       - 'package.json'
       - 'analysis-prompts/**'
 
-permissions:
-  contents: read
-  issues: write
-  pull-requests: read
+permissions: read-all
 
 jobs:
   ai-analysis:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: read
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
