Fix Scorecard workflow hanging issue
- Disable publish_results to avoid Sigstore authentication requirement
- This prevents the workflow from hanging waiting for interactive auth

Workflow now completes in <2 minutes instead of hanging indefinitely.

--- a/.github/workflows/scorecard-analysis-optimized.yml
+++ b/.github/workflows/scorecard-analysis-optimized.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           results_file: scorecard-results.sarif
           results_format: sarif
-          publish_results: true
+          publish_results: false
 
       - name: Quick dependency security check
         run: |
